Add desplegable mobile menu

--- a/index.html
+++ b/index.html
@@ -33,7 +33,16 @@
                 <li><a href="#">Invierte con nosotros</a></li>
             </ul>
             <i id="menu" class="fa-solid fa-bars"></i>
+            <div class="mobile-menu inactive">
+                <ul>
+                    <li><a href="#">Nosotros</a></li>
+                    <li><a href="#">FAQ</a></li>
+                    <li><a href="#">Contáctanos</a></li>
+                    <li><a href="#">Invierte con nosotros</a></li>
+                </ul>
+            </div>
         </div>     
     </nav>
 </body>
+<script src="interactive.js"></script>
 </html>
