--- a/index.html
+++ b/index.html
@@ -9,8 +9,13 @@
     <link rel="icon" href="./img/ico_fav_cabal.ico">
     <!-- Fontawsome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;500&family=Raleway:wght@100;300;500&display=swap" rel="stylesheet">
     <!-- General styles -->
     <link rel="stylesheet" href="style.css">
+
     <title>Grupo Cabal Ecuador</title>
 </head>
 <body>
@@ -91,6 +96,21 @@
         </div>
     </div>
 
+    <!-- Section -->
+    <section>
+        <div class="section-container">
+            <img src="/img/icon_cabal.png" alt="logo cabalito">
+            <div>
+                <p>Grupo Cabal Ecuador</p>
+                <p>
+                    Nace con el concepto de construir <strong>economía colaborativa</strong> en el país.
+                    Con empresas sostenibles y sustentables que cumplan normativas y regulaciones , además ofrezcan productos y servicios con altos estándares de calidad. 
+                    Dentro de este concepto abarcamos <strong>seis sectores</strong>.
+                </p><br>
+                <div id="conoceMas"><a href="#">Conoce más</a></div>
+            </div>
+        </div>
+    </section>
 </body>
 <script src="interactive.js"></script>
 </html>
